--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: mosazhaw/devopsazure:latest
+          tags: besram/devopsazure:latest
 
   deploy:
     permissions:
